Fix alignment issues for trending section

--- a/style.css
+++ b/style.css
@@ -185,7 +185,7 @@ img.avatar {
 .card {
     background-color: #ffffff;
     padding: 30px 20px 30px 40px;
-    height: 150px;
+    height: 170px;
     border-radius: 10px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     background: linear-gradient(
@@ -249,15 +249,22 @@ img.avatar {
     display: grid;
     grid-template-columns: 60px 1fr;
     gap: 15px;
+    align-items: center;
 }
 
 .trending > p {
     align-self: center;
     display: grid;
     grid-template-rows: 1fr 1fr;
-    /* gap: 10px; */
+    gap: 2px; 
 }
 
 .trending > p span:first-child {
     color: #000000;
+    align-self:flex-end;
+}
+
+.trending img:hover {
+    border: solid 2px #000000;
+    border-radius: 50%;
 }
